# detectGesture

./: CHANGELOG.md  README.md  copy_to_submodule.sh
apps/: CMakeLists.txt
apps/multicore_detect_gesture/: CMakeLists.txt  multicore_model_cascade_cm4.cc  multicore_model_cascade_cm7.cc
examples/: CMakeLists.txt
examples/detect_gesture/: CMakeLists.txt  detect_gesture.cc
models/: model_edgetpu.tflite
